Fix large audio file uploads with direct Cloudinary upload
- Added Vercel function timeout and memory configuration
- Implemented direct Cloudinary upload endpoint for large files
- Created custom Django admin form for episodes with URL field option
- Added upload signature generation for secure Cloudinary uploads
- Created upload page for direct file uploads bypassing Django server
- Increased file upload limits to 10MB for smaller files

This resolves 500 errors when uploading audio files >4.5MB on Vercel

--- a/server/server/vercel.json
+++ b/server/server/vercel.json
@@ -26,5 +26,11 @@
       "src": "/(.*)",
       "dest": "server/wsgi.py"
     }
-  ]
+  ],
+  "functions": {
+    "server/wsgi.py": {
+      "maxDuration": 30,
+      "memory": 1024
+    }
+  }
 }
